docs/tests/nameres/control_flow/valid/SwitchNoDefault.src
// Valid

fn void main() {
    let int i = 0;
    switch (i) {
        case 1 {

        }
    }
}