docs/tests/nameres/control_flow/invalid/SwitchInvalidCase.src
// Invalid 

fn void main() {
    let int i = 0;
    switch (i) {
        case i+1 { 

        }
    }
}